# Secret-Escrow

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  ape-config.yaml  brownie-config.yaml  config.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  pr.yml
app/: exceptions.py
app/blockchain/: tripartite_key_exchange.py
app/blockchain/type/: eth_account.py
app/utils/: contract_utils.py  web3_utils.py
contracts/access/: Ownable.sol
contracts/exchange/: DVPStorage.sol  IbetSecurityTokenDVP.sol
contracts/ledger/: PersonalInfo.sol
contracts/token/: IbetShare.sol  IbetStandardToken.sol  IbetStraightBond.sol
contracts/utils/: Errors.sol  TripartiteKeyExchange.sol
data/: networks.yml
interfaces/: ContractReceiver.sol  IbetExchangeInterface.sol  IbetSecurityTokenInterface.sol  IbetStandardTokenInterface.sol
sandbox/py_ecc/: py_ecc_sample.py  py_ecc_sample_1.py  py_ecc_sample_2.py
sandbox/tripartite_dh/: Results.md  tripartite_dh_sample.py
tests/: anvil_manager.py  conftest.py  local_anvil_config.py  run_anvil_test.sh
tests/blockchain/: test_tripartite_key_exchange.py
tools/: json_filter.py
